# roboy_rqt_plugins

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
docs/: CMakeLists.txt  package.xml
docs/documentation/: Doxyfile  conf.py
docs/documentation/ScopeContext/: 3_technical_interfaces.rst
docs/documentation/Usage/: 0_installation.rst  1_getting_started.rst
docs/documentation/development/: 06_building_block_view.rst
m3_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
m3_rqt/include/m3_rqt/: m3_rqt.hpp
m3_rqt/resource/: MyPlugin.ui
m3_rqt/scripts/: m3_rqt
m3_rqt/src/: m3_rqt.ui  msj_platform.cpp
m3_rqt/src/m3_rqt/: my_module.py
msj_platform_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
msj_platform_rqt/include/msj_platform_rqt/: msj_platform.hpp  msj_platform_rqt.hpp
msj_platform_rqt/qcustomplot/: qcustomplot.cpp
msj_platform_rqt/src/: msj_platform_rqt.cpp  msj_platform_rqt.ui
roboy_arms/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_arms/include/roboy_arms/: roboy_arms.hpp
roboy_arms/src/: roboy_arms.cpp  roboy_arms.ui  udptest.cpp
roboy_audio/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_audio/include/roboy_audio/: roboy_audio.hpp
roboy_audio/src/: roboy_audio.cpp  roboy_audio.ui
roboy_control/: CMakeLists.txt  package.xml  plugin.xml
roboy_control/include/roboy_control/: roboy_control.hpp
roboy_control/src/: roboy_control.cpp  roboy_control.ui
roboy_motor_calibration/arduino/muscle_calibration/: muscle_calibration.ino  wirelessLove.cpp  wirelessLove.hpp
roboy_motor_calibration/config/: roboy.yaml
roboy_motor_calibration/include/roboy_motor_calibration/: roboy_motor_calibration.hpp
roboy_motor_calibration/scripts/: cycle_script.py
roboy_motor_calibration/src/: roboy_motor_calibration.cpp  roboy_motor_calibration.ui
roboy_motor_command/: CMakeLists.txt  package.xml
roboy_motor_command/include/roboy_motor_command/: roboy_motor_command.hpp
roboy_motor_command/src/: roboy_motor_command.cpp  roboy_motor_command.ui
roboy_motor_record/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_motor_record/include/roboy_motor_record/: roboy_motor_record.hpp
roboy_motor_record/src/: roboy_motor_record.cpp  roboy_motor_record.ui
roboy_motor_status/: CMakeLists.txt  package.xml
roboy_motor_status/include/roboy_motor_status/: roboy_motor_status.hpp
roboy_motor_status/src/: roboy_motor_status.cpp  roboy_motor_status.ui
roboy_trajectories_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
roboy_trajectories_control/include/roboy_trajectories_control/: roboy_trajectories_control.hpp
roboy_trajectories_control/resource/: RoboyTrajectoriesContol.ui  roboy_motor_command.ui  roboy_trajectories_control.ui
roboy_trajectories_control/src/: actions_client.cpp  actions_server.cpp  roboy_trajectories_control.cpp
rqt_perspectives/: ik_control.rviz
shoulder_testbed/: CMakeLists.txt  package.xml  plugin.xml  setup.py
shoulder_testbed/include/shoulder_testbed/: shoulder_testbed.hpp
shoulder_testbed/src/: shoulder_testbed.cpp  shoulder_testbed.ui
shoulder_testbed_rqt/: CMakeLists.txt  package.xml  plugin.xml
shoulder_testbed_rqt/include/shoulder_testbed_rqt/: shoulder_testbed_rqt.hpp
shoulder_testbed_rqt/src/: shoulder_testbed_rqt.cpp  shoulder_testbed_rqt.ui
vr_puppets/: CMakeLists.txt  package.xml  plugin.xml  setup.py
vr_puppets/include/vr_puppets/: vr_puppets.hpp
vr_puppets/src/: vr_puppets.cpp  vr_puppets.ui
